Update typo and bg color

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Jonsy - Zuhause</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -8,7 +9,7 @@
     <img src="stoppschild-auf-beton_animated-cover.gif">
   </div>
   <div id="sub">
-    <h1>Jonsy - Zuhause</h1>
+    <h1>Jonsy - Zuhause (Single)</h1>
     <h2>Out now</h2>
     <div class="link-container">
       <div class="link">
