Switch to release page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <html>
 <head>
   <title>Jonsy - Zuhause</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Baskervville|Calistoga|Ibarra+Real+Nova|Nanum+Gothic|Playfair+Display|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://kit.fontawesome.com/2cf1d45a87.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="main-image">
-    <img src="stoppschild-auf-beton_animated-cover.gif">
+    <iframe width="900" height="600" src="https://www.youtube.com/embed/q-2h2AcDsTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div id="sub">
-    <h1>Jonsy - Zuhause (Single)</h1>
-    <h2>29.11.2019</h2>
+    <h1><a href="/">Zuhause</a></h1>
+  </div>
+  <div class="link-container">
+    <div class="link">
+      <a href="https://www.facebook.com/jonsy.music/"><i class="fab fa-facebook-f"></i></a>
+    </div>
+    <div class="link">
+      <a href="https://www.instagram.com/jonsymusic/"><i class="fab fa-instagram"></i></a>
+    </div>
+    <div class="link">
+      <a href="https://www.youtube.com/channel/UCFRMSnczWSnuj9Tsc0I2Oow"><i class="fab fa-youtube"></i></a>
+    </div>
+    <div class="link">
+      <a href="https://open.spotify.com/artist/2KhGG0axN1LJH8j2VDhFLw?si=VnbOrNIlQvemS93eZgSUJQ"><i class="fab fa-spotify"></i></a>
+    </div>
+    <div class="link">
+      <a href="https://music.apple.com/us/artist/jonsy/1254080614"><i class="fab fa-itunes-note"></i></a>
+    </div>
+    <div class="link">
+      <a href="https://jonsy.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
+    </div>
   </div>
 </body>
 </html>
