--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Jonsy - Zuhause</title>
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Calistoga|Ibarra+Real+Nova|Nanum+Gothic|Playfair+Display|Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/2cf1d45a87.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -10,7 +11,7 @@
     <iframe width="900" height="600" src="https://www.youtube.com/embed/q-2h2AcDsTo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div id="sub">
-    <h1><a href="/">Zuhause</a></h1>
+    <h1><a href="https://open.spotify.com/artist/2KhGG0axN1LJH8j2VDhFLw?si=VnbOrNIlQvemS93eZgSUJQ">Zuhause</a></h1>
   </div>
   <div class="link-container">
     <div class="link">
